Enhance SEO and content for pressure washing services
Updated the title and meta description for SEO optimization. Added content to various sections to enhance service descriptions and improve clarity.

--- a/local/pressure-washing-norton.html
+++ b/local/pressure-washing-norton.html
@@ -6,10 +6,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title></title>
+<title>Driveway Pressure Washing in Norton, Doncaster | Professional Local Service</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/preure-washing-norton.html">
-<meta name="description" content="">
+<meta name="description" content="Restore your driveway in Norton, Doncaster with expert pressure washing. Remove moss, oil stains & grime. Book a free quote today.">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 h1 {
@@ -133,12 +133,12 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h1></h1>
-<p></p>
-<p></p>
-<p></p>
+<h1>Professional Driveway Pressure Washing in Norton, Doncaster</h1>
+<p>Over time, driveways in Norton, Doncaster naturally collect dirt, moss, algae, and oil stains that can make your property look tired and unsafe. Our professional driveway pressure washing service is designed to restore the clean, fresh appearance of your surface while improving grip and safety. Using commercial-grade equipment and surface-specific techniques, we safely clean block paving, concrete, tarmac, and stone driveways without causing damage. Whether your driveway is discoloured from traffic or slippery from organic growth, our pressure washing service delivers noticeable results that instantly lift your home’s kerb appeal.</p>
+<p>We understand that every driveway is different, which is why our Norton, Doncaster pressure washing service is tailored to suit your surface and condition. Before cleaning begins, we assess the driveway to determine the correct pressure and cleaning solution, ensuring a deep clean without erosion or joint damage. Our process removes embedded grime and weeds from between paving blocks, helping extend the lifespan of your driveway. Homeowners across Norton trust our service for reliable results, careful workmanship, and a finish that makes their property look well cared for.</p>
+<p>A freshly cleaned driveway creates a strong first impression and adds value to your home. Our local pressure washing team in Norton, Doncaster delivers consistent, high-quality results with minimal disruption. Whether you’re preparing for visitors or simply maintaining your property, our driveway pressure washing service offers a fast, effective solution you can rely on.</p>
 <img src="/images/pressure-washing-driveway.webp"
-alt=""
+alt="Clean block paved driveway after professional pressure washing in Norton, Doncaster"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -147,12 +147,12 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 2 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
-<p></p>
+<h2>Patio Pressure Washing for Cleaner Outdoor Spaces in Norton, Doncaster</h2>
+<p>Patios are meant to be enjoyed, but exposure to weather in Norton, Doncaster often leaves them looking dirty, slippery, and neglected. Our patio pressure washing service removes built-up algae, moss, lichen, and ground-in dirt to restore your outdoor space to its original condition. We clean all patio surfaces including paving slabs, natural stone, porcelain, and concrete, using professional pressure washing equipment that delivers a deep clean without surface damage. A clean patio not only looks better but is also safer, reducing slip hazards caused by organic growth. Whether your patio is used for entertaining, relaxing, or family gatherings, our pressure washing service helps create a cleaner, more inviting space that you can enjoy throughout the year.</p>
+<p>Our Norton, Doncaster patio pressure washing service is carried out with care and attention to detail. We adjust water pressure and cleaning methods to suit the material, ensuring effective results while protecting your paving. Stubborn stains and weathered discolouration are lifted, leaving a brighter, more uniform finish. Many local homeowners choose us for routine maintenance or seasonal cleans to keep their patios looking their best.</p>
+<p>If your patio has lost its colour or become slippery underfoot, professional pressure washing is the quickest way to refresh it. Our local team in Norton, Doncaster delivers reliable results that transform outdoor areas and improve usability instantly.</p>
 <img src="/images/pressure-washing-patios.webp"
-alt=""
+alt="Freshly cleaned stone patio after pressure washing in Norton, Doncaster garden"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -161,12 +161,12 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
-<p></p>
+<h2>House & Garden Wall Pressure Washing in Norton, Doncaster</h2>
+<p>External walls are constantly exposed to the elements, leading to dirt, algae, and staining that can dull the appearance of your property. Our house and garden wall pressure washing service in Norton, Doncaster safely removes these contaminants to restore clean, well-maintained surfaces. We clean brickwork, rendered walls, stone features, and boundary walls using controlled pressure and suitable cleaning solutions. This process improves the overall appearance of your home while helping prevent long-term surface damage caused by organic growth and pollution buildup.</p>
+<p>Every wall surface requires a careful approach, which is why our pressure washing service in Norton, Doncaster begins with a full assessment. We select the correct pressure level and cleaning method to protect mortar, render, and finishes while achieving excellent results. Garden walls, retaining walls, and decorative features are cleaned thoroughly, removing unsightly staining and restoring their original colour. Regular wall pressure washing helps maintain property value and creates a cleaner, more cared-for exterior. Homeowners trust our local service for its attention to detail and consistently high standards.</p>
+<p>Clean walls make a noticeable difference to the overall appearance of your home. Our Norton, Doncaster pressure washing service provides a safe, effective solution for keeping exterior walls looking fresh and well maintained year-round.</p>
 <img src="/images/pressure-washing-walls.webp"
-alt=""
+alt="Brick house and garden wall cleaned with pressure washing in Norton, Doncaster"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -175,12 +175,12 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 4 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
-<p></p>
+<h2>Decking & Fence Pressure Washing Services in Norton, Doncaster</h2>
+<p>Decking and fencing are key features of many gardens in Norton, Doncaster, but they can quickly become weathered, dirty, and slippery. Our decking and fence pressure washing service removes algae, mould, and ingrained dirt to restore a cleaner, safer surface. We clean wooden and composite decking as well as timber and panel fencing, using controlled pressure to avoid splintering or surface damage. Regular pressure washing helps extend the life of decking boards and fencing while improving the overall appearance of your outdoor space.</p>
+<p>Our local pressure washing team in Norton, Doncaster takes a careful, professional approach to cleaning decking and fences. We assess the condition of the material before cleaning and use techniques that lift dirt without stripping protective layers unnecessarily. The result is a refreshed, brighter finish that enhances your garden and prepares surfaces for sealing or staining if required. Many homeowners choose our service as part of routine garden maintenance or before summer use.</p>
+<p>Clean decking and fencing can completely transform the look of your garden. With our professional pressure washing service in Norton, Doncaster, you can enjoy a safer, more attractive outdoor area with minimal effort and long-lasting results.</p>
 <img src="/images/pressure-wash-decking.webp"
-alt=""
+alt="Wooden decking and garden fence cleaned after pressure washing in Norton, Doncaster"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -189,14 +189,14 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
+<h2>Trusted Local Pressure Washing Services in Norton, Doncaster</h2>
 <div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
 <button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
 <img id="lightboxImg" src="" alt="">
 </div>
-<p></p>
+<p>If you’re looking for reliable, professional pressure washing in Norton, Doncaster, our local team is here to help. From driveways and patios to walls, decking, and fencing, we deliver high-quality results with a friendly, dependable service. Get in touch today for a free, no-obligation quote and see how our pressure washing services can restore and protect your property.</p>
 <img src="/images/pressure-washing-algae.webp"
-alt=""
+alt="Professional pressure washing service restoring exterior surfaces in Norton, Doncaster"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
