Update canonical URL and location details

--- a/local/pressure-washing-eggborough.html
+++ b/local/pressure-washing-eggborough.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title></title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-?????????????????????.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-eggborough.html">
 <meta name="description" content="">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -229,7 +229,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-???????????????????????.html",
+"url": "https://homerepairs4u.com/local/pressure-washing-eggborough.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -242,10 +242,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5333,???????????????????
-"longitude": -1.1166?????????????????
+"latitude": 53.7007,
+"longitude": -1.1548
 },
-"areaServed": "?????????????????/////",
+"areaServed": "Eggborough",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
